# equater-archive

./: .gitignore  .prettierrc  .swiftformat  Makefile  README.md  docker-compose.yml  tmuxinator.example.yml
equater-android/: .editorconfig  .gitignore  build.gradle  settings.gradle
equater-api/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
equater-cli/: .gitignore  Cargo.toml  README.md
equater-cli/database/: Cargo.toml
equater-cli/database/src/: connection.rs  lib.rs  models.rs  schema.rs
equater-cli/database/src/models/: user.rs
equater-cli/database/src/repository/: user_repository.rs
equater-cli/migrations/2022-05-14-175316_user/: down.sql  up.sql
equater-cli/src/: authentication.rs  commands.rs  fetch_users.rs  fetch_vendors.rs  flag_command.rs  main.rs  user.rs  vendor.rs
equater-cli/src/authentication/: authentication_api.rs  authentication_api_fake.rs  authentication_controller.rs
equater-cli/src/fetch_users/: fetch_user_api.rs  fetch_user_api_fake.rs  fetch_users_command.rs  fetch_users_response.rs  fetch_users_ui.rs
equater-cli/src/fetch_vendors/: fetch_vendors_api.rs  fetch_vendors_api_fake.rs  fetch_vendors_command.rs  fetch_vendors_ui.rs
equater-ios/: .gitignore  Podfile  spmready.swift
equater-web/: .gitignore  Dockerfile  README.md  convert-svg-example.sh  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
resources/: Equater.mwb  Equater.mwb.bak
scripts/: seed.sh
terraform/: README.md  infrastructure.test.tf  infrastructure.tf  main.tf
(+1019 files in other folders)
