# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
edition = "2021"
name = "equater"
version = "0.1.0"

[workspace]
members = ["database"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.53"
chrono = "0.4.19"
database = { path = "database" }
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
dialoguer = "0.10.1"
dotenv = "0.15.0"
fake = { version = "2.4", features = ["derive", "chrono", "uuid"] }
http = "0.2"
k9 = "0.11.1"
itertools = "0.10.2"
once_cell = "1.10.0"
rand = "0.8"
regex = "1.5.5"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.16.20"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serial_test = "0.6.0"
cli-table = "0.4"
