[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
